completed exercise and equipment models